gcc/testsuite/gdc.test/runnable/imports/ice15176b.d
module imports.ice15176b;

alias CodepointSet = InversionList!();

struct InversionList()
{
    uint[] data;
}
